implemented persistence for events and commands, with command WAL and read-only mode if DB is unavailable